release-note/1.4.2/de_DE.md
## [1.4.2]
### New
- Die neue Sicherungsfunktion ist ab sofort verfügbar und unterstützt die Sicherung zwischen Netzwerkdiskette, LAN -Speicher, USB -Speicher und Zima -Geräten
- Beim Erstellen von Speicherplatz werden JBOD und RAID6 jetzt unterstützt, und eine neue Schnittstelle zur Erstellung von Speichererstellungen ist verfügbar
- Im Generalpanel der Einstellungen wird die Anzeige von Systeminformationen hinzugefügt
- Tipps werden angezeigt, wenn die App geöffnet wird, und einige Apps fordern das Kontokennwort auf
- Unterstützen Sie SSL -Zertifikate für einen besseren Zugriffssicherheit
### Fixed
- Das Problem behoben
- Anwendungs -Download -Optimierung und Fixes
- Intelligente Proxy mit Hochverfügbarkeit: Schaltet automatisch transparente Spiegelproxies, ohne die Konfiguration zu ändern, das reibungslose Image in verschiedenen Netzwerken - Umgebungen zu ermöglichen und die Verfügbarkeit erheblich zu verbessern und Erfolgsraten für globale Benutzer herunterzuladen
- Optimierter Anwendungs -Download -Prozess und verbesserte Gesamtdownloaderfahrung
- Deutlich verbesserte Anwendungs -Download -Geschwindigkeit
- Das Problem der ungenauen Fortschrittsleiste wurde behoben, wodurch die Fortschritte präziser angezeigt werden
- Optimierte Anwendungsstartzeit nach dem Neustart des Geräts
- Optimierte Anwendungs -Update -Überprüfungsmechanismus und verbesserte Verfügbarkeit von Anwendungsaktualisierungen
- Festplattenanzeigeprobleme auf verschiedenen Geräten behoben
- Optimierter Indexressourcenverbrauch
- Verbesserte Verfügbarkeit von AI -Suchfunktionen
- Fixed Cloud -Laufwerksmontagefehler oder Anzeigenprobleme nach der Montage
- Problem mit Unfähigkeit für Unmontal -Cloud -Laufwerke
- Es wurde nach der Initialisierung nicht ordnungsgemäß geteilt, dass Zimaos-hd nicht ordnungsgemäß geteilt wurde
- Es wurde die Unfähigkeit festgelegt, neue Festplatten in denselben Scheibenschlitzen bei der Wiederherstellung von RAID auszuwählen
- Das Problem behoben, bei dem Dateien, die illegale Zeichen enthalten, nicht hochgeladen werden konnten, wenn MacOS über ein SMB montiert.
- Der optimierte Mechanismus für die Codierungsmechanismus für den Charakter unterstützt jetzt das normale Hochladen von Dateien mit Sonderzeichen.
### Tips
- Wenn Sie Softwareprobleme finden, werden Sie willkommen, um sich der Zwietracht anzuschließen und von 28.000 Mitgliedern der Zima -Community zu unterstützen
- <a href = "https://zimaboard.com/discord" target = "_ leer" style = "color: blau"> https://zimaboard.com/discord </a>
